Fixed spacing between mobile header nav list items

--- a/static/scss/_header.scss
+++ b/static/scss/_header.scss
@@ -134,6 +134,10 @@
 #header-menu-xs {
   font-family: $font-family-serif, serif;
 
+  li {
+    margin-bottom: 0;
+  }
+
   a {
     font-size: 14px;
     font-weight: bold;
